observability/manifest/prometheusalert.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: prometheus-alert
  name: prometheus-alert
  namespace: monitor
spec:
  replicas: 1
  serviceName: "postgres"
  selector:
    matchLabels:
      app: prometheus-alert
  template:
    metadata:
      labels:
        app: prometheus-alert
    spec:
      containers:
        - image: feiyu563/prometheus-alert:master
          name: prometheus-alert-main
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: config
              mountPath: /app/conf/app.conf
              subPath: app.conf
            - name: app-db
              mountPath: /app/db
      volumes:
        - name: config
          configMap:
            name: prometheus-alert-conf
            items:
              - key: app.conf
                path: app.conf
      tolerations:
        - key: ack-pool-name
          operator: Exists
          effect: NoSchedule
  volumeClaimTemplates:
    - metadata:
        name: app-db
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "default"
        resources:
          requests:
            storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-alert
  namespace: monitor
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app: prometheus-alert
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: prometheus-alert-center
  namespace: monitor
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - backend:
              service:
                name: prometheus-alert
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ${HOST}
      secretName: pa-com-tls
