observability/manifest/pushprox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushprox-server
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushprox-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pushprox-server
    spec:
      containers:
        - image: registry.cn-shenzhen.aliyuncs.com/lipaysam/pushprox:v0.2.0
          imagePullPolicy: IfNotPresent
          name: pushprox
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pushprox-server-service
  namespace: monitor
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: pushprox-server
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushprox-server-ingress
  namespace: monitor
spec:
  ingressClassName: nginx
  rules:
    - host: ${HOST}
      http:
        paths:
          - backend:
              service:
                name: pushprox-server-service
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ${HOST}
      secretName: pushprox-com-tls
